[metadata]
name = knp
version: file: VERSION
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license = Apache License, Version 2.0
license_files = LICENSE.txt
author = Kaspersky Lab.
author_email = author@kaspersky.com
description = Kaspersky Neuromorphic Platform Python framework
long_description = file: README.md, AUTHORS
long_description_content_type = text/markdown
url = https://github.com/KasperskyLab/knp
project_urls =
    Bug Tracker = https://github.com/KasperskyLab/knp/issues
    Source Code = https://github.com/KasperskyLab/knp
keywords = deep-learning, deep-neural-networks, machine-learning, ml, neuromorphic, neuro-science, neural-network, spiking-network
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: Other Audience
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Natural Language :: Russian
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10

[options.package_data]
* = *.md, *.so

[options.packages.find]
where = .
exclude =
    tests
    __init__.pyi

[pycodestyle]
indent-size = 4
max-line-length = 100

[mypy]
ignore_missing_imports = True
follow_imports = silent
